Добавлен веб-сервис по созданию электронных ключей для букинга
