# api/web/docs/swagger.json
@@ -401,7 +401,50 @@
                 "tags": [
                     "DoorLock"
                 ],
-                "description": "Return all existing keys for requested user(by token) or by other params",
+                "description": "Return all existing keys for requested user(by token) or by other params. Parameters info is nessesary for generating E-key for the author of booking, appointed when booking was added. Type of th E-key could be 0 or 2. 0 - E-key for period from startDate untill endDate.\n     *          By Default E-key will be generated from current moment until the departure date of booking.",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Access token",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Authorization"
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "body",
+                        "description": "Key parameters",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/KeyNew"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response",
+                        "schema": {
+                            "$ref": "#/definitions/KeysInfo"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": [],
+                        "OAuth2": []
+                    }
+                ]
+            }
+        },
+        "/key/generate": {
+            "post": {
+                "tags": [
+                    "DoorLock"
+                ],
+                "description": "Generate E-key(s) for the author of existing booking, that was uploaded before, for all door locks for booking apartment. Supposed that every booking has only one apartment, but apartment can have several door locks",
                 "parameters": [
                     {
                         "name": "Authorization",
@@ -415,10 +458,23 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Success response",
                         "schema": {
-                            "$ref": "#/definitions/KeysInfo"
+                            "property": "Response",
+                            "properties": {
+                                "success": {
+                                    "description": "Success",
+                                    "type": "string",
+                                    "example": "ok"
+                                },
+                                "keysId": {
+                                    "description": "List of Keys that were generated",
+                                    "type": "array",
+                                    "example": "[11,12]"
+                                }
+                            },
+                            "type": "object"
                         }
                     }
                 },
@@ -1155,6 +1211,38 @@
                         }
                     },
                     "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "KeyNew": {
+            "required": [
+                "bookingId"
+            ],
+            "properties": {
+                "bookingId": {
+                    "description": "Identity of booking from external systems",
+                    "type": "string",
+                    "example": "ID 5"
+                },
+                "remarks": {
+                    "description": "Guest's second name",
+                    "type": "string"
+                },
+                "startDate": {
+                    "description": "Date and time from which key will be valid. For type=2 this field could be empty. If this field is empty, then startDate/endDate will be set for all booking period",
+                    "type": "string",
+                    "example": "12-09-2017 12:00:00"
+                },
+                "endDate": {
+                    "description": "Date and time from which key will be invalid.",
+                    "type": "string",
+                    "example": "10-10-2017 14:00:00"
+                },
+                "type": {
+                    "description": "Type of E-key (could be 0 for Periodic or 2 for Permanent",
+                    "type": "integer",
+                    "example": "0"
                 }
             },
             "type": "object"
